--- a/Battleships/ClientApp/package.json
+++ b/Battleships/ClientApp/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "6.0.2",
     "@angular/platform-server": "6.0.2",
     "@angular/router": "6.0.2",
-    "@aspnet/signalr": "1.0.0-preview2-final",
+    "@aspnet/signalr": "1.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.3.7",
